# The-Dictator

./: Building a Local Dictation App.md  CONTRIBUTING.md  Dictator_ AI-Powered Dictation System.md  Done    The Dictator   is ready.txt  Done    The-Dictator   is ready.txt  LICENSE  README.md  Readme options  for The-Dictator.txt  Tartontis_The-Dictator.mhtml  agent-playbook.md  api.md  architecture.md  deep-research-report.md  dev (1).sh  dev.sh  download_model.sh  gitignore  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  python-package.yml
backend/: event_bus.py  main.py
backend/api/: routes.py
backend/config/: __init__.py  loader.py  models.py
backend/engine/: __init__.py  llm.py  normalizer.py  transcriber.py
backend/output/: __init__.py  gui.py  session_logger.py
config/: button_map.example.toml  settings.example.toml
docs/: agent-playbook.md  api.md  architecture.md
docs/adr/: 0001-browser-ui-split.md
frontend/: app.js  hotkeys.js  index.html  midi.js  recorder.js  style.css
prompts/: deep_research.j2  expand.j2  fix_grammar.j2  summarize.j2
scripts/: benchmark_io.py  check_doc_links.py  dev.sh  download_model.sh  run_gui.py  verify_frontend.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_llm_refine.py  test_templates.py  test_transcribe.py  test_vad.py
