[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-dictator"
version = "0.0.1"
description = "Local-first voice dictation with MIDI control and LLM refinement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tartontis" }
]
keywords = [
    "dictation",
    "speech-to-text",
    "whisper",
    "midi",
    "transcription"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Transcription
    "faster-whisper>=1.0.0",
    
    # Audio processing
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    
    # Configuration
    "tomli>=2.0.1; python_version < '3.11'",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # LLM clients (optional but commonly used)
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    
    # Utilities
    "jinja2>=3.1.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",  # For testing FastAPI
]

# Optional: whisper.cpp bindings (for ARM/low-memory)
cpp = [
    "pywhispercpp>=1.0.0",
]

# Optional: VAD support
vad = [
    "silero-vad>=0.0.1",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ewhhansen-dev/The-Dictator-offline_Essential"
Documentation = "https://github.com/ewhhansen-dev/The-Dictator-offline_Essential/tree/main/docs"
Repository = "https://github.com/ewhhansen-dev/The-Dictator-offline_Essential"
Issues = "https://github.com/ewhhansen-dev/The-Dictator-offline_Essential/issues"

[project.scripts]
the-dictator = "backend.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = [
    "/backend",
    "/config",
    "/frontend",
    "/docs",
    "/prompts",
    "/scripts",
    "/config/settings.example.toml",
    "/config/button_map.example.toml",
]

# =============================================================================
# Ruff (linting)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict=
]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG"]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# =============================================================================
# MyPy
# =============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["backend"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
